--- a/src/screens/safes/secretFolder/SecretSafes.css
+++ b/src/screens/safes/secretFolder/SecretSafes.css
@@ -28,6 +28,10 @@
   font-weight: 500;
   font-family: "Roboto", sans-serif;
   margin-bottom: 0.5rem;
+  width: 29rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #safeDescription {
@@ -179,6 +183,11 @@
   font-size: 1rem;
   padding-left: 1rem;
   font-family: "Roboto", sans-serif;
+  width: 35rem;
+  /* width: 29rem; */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .newlyAdded {
